--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
+<html>
 <head>
    <link rel="stylesheet" href="index.css">  
 </head>
-
+<body>
 <canvas id="bad" width="560" height="500"></canvas>
+</body>
+   </html>
