--- a/donto/index.html
+++ b/donto/index.html
@@ -1,2 +1,9 @@
+<style>
+  canvas {
+    background-color: #fff9bd;
+  }
+  
+</style>
+
 <script src="Player.js"></script>
 <canvas id="canvas" width="960" height="640"></canvas>
