--- a/donto/index.html
+++ b/donto/index.html
@@ -6,4 +6,5 @@
 </style>
 
 <script src="Player.js"></script>
+<script src="tmpenemy.js"></script>
 <canvas id="canvas" width="960" height="640"></canvas>
