--- a/donto/index.html
+++ b/donto/index.html
@@ -7,4 +7,4 @@
 
 <script src="Player.js"></script>
 <script src="tmpenemy.js"></script>
-<canvas id="canvas" width="960" height="640"></canvas>
+<canvas id="canvas" width="960" height="640" onload="update()"></canvas>
