--- a/donto/index.html
+++ b/donto/index.html
@@ -8,3 +8,7 @@
 <script src="Player.js"></script>
 <script src="tmpenemy.js"></script>
 <canvas id="canvas" width="960" height="640" onload="update()"></canvas>
+<script>
+  var canvas = document.getElementById("canvas");
+  canvas.onload= function(){update(canvas)};
+</script>
