--- a/donto/index.html
+++ b/donto/index.html
@@ -7,7 +7,7 @@
 
 <script type="text/javascript" src="Player.js"></script>
 <script type="text/javascript" src="tmpenemy.js"></script>
-<canvas id="canvas" width="960" height="640" onload="alert('bad')"></canvas>
+<canvas id="canvas" width="960" height="640" onload="doThing()"></canvas>
 <script>
   var canvas = document.getElementById("canvas");
   canvas.onload = function(){update(canvas)};
