--- a/donto/index.html
+++ b/donto/index.html
@@ -1,14 +1,50 @@
 <style>
-  canvas {
-    background-color: #fff9bd;
-  }
-  
+    div.static {
+      position: static;
+      width: 890px;
+      height: 90px;
+      padding-left: 10px;
+      padding-top: 10px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    #control-right {
+        padding-top: 15px;
+        float:right;
+    }
+    #control-right-2 {
+        border:solid #CCC;
+        border-width:0 1px;
+        margin:0 10px;
+        min-width:60px;
+        padding:0 10px
+    }
+    #p {
+        position: absolute;
+        right: 0;
+    }
 </style>
+    
 
-<script type="text/javascript" src="Player.js"></script>
-<script type="text/javascript" src="tmpenemy.js"></script>
-<canvas id="canvas" width="960" height="640"></canvas>
-<script>
-  var canvas = document.getElementById("canvas");
-  update(canvas);
-</script>
+
+<html>
+    <title>LameTD</title>
+</html>
+
+<canvas id="bad" style="background-color: #000000;"></canvas>
+<div id="test" class="static" style="background-color:#DCDCDC">
+    <button onclick="addMoney(7)"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%201.png?raw=true"><br>Tower 1<br>₪50</button>
+    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%202.png?raw=true"><br>Tower 2<br>₪125</button>
+    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%203.png?raw=true"><br>Tower 3<br>₪275</button>
+    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%204.png?raw=true"><br>Tower 4<br>₪575</button>
+    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%205.png?raw=true"><br>Tower 5<br>₪1175</button>
+    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%206.png?raw=true"><br>Tower 6<br>₪2375</button>
+    <div id="control-right"> 
+        <div id="control-right-2">
+            Cash ₪<span id="cash">150</span><br>
+            Wave #<span id="wave">1</span>
+        </div>
+    </div>
+</div>
+
+<script src="test.js"></script>
+<p id="p"></p>
