--- a/donto/index.html
+++ b/donto/index.html
@@ -30,14 +30,14 @@
     <title>LameTD</title>
 </html>
 
-<canvas id="bad" style="background-color: #000000;"></canvas>
+<canvas id="bad" style="background-color: #4d4d4d;"></canvas>
 <div id="test" class="static" style="background-color:#DCDCDC">
-    <button onclick="addMoney(7)"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%201.png?raw=true"><br>Tower 1<br>₪50</button>
-    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%202.png?raw=true"><br>Tower 2<br>₪125</button>
-    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%203.png?raw=true"><br>Tower 3<br>₪275</button>
-    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%204.png?raw=true"><br>Tower 4<br>₪575</button>
-    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%205.png?raw=true"><br>Tower 5<br>₪1175</button>
-    <button><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%206.png?raw=true"><br>Tower 6<br>₪2375</button>
+    <button onclick="doTower1()" id="button1"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%201.png?raw=true"><br>Tower 1<br>₪50</button>
+    <button onclick="doTower2()" id="button2"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%202.png?raw=true"><br>Tower 2<br>₪125</button>
+    <button onclick="doTower3()" id="button3"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%203.png?raw=true"><br>Tower 3<br>₪275</button>
+    <button onclick="doTower4()" id="button4"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%204.png?raw=true"><br>Tower 4<br>₪575</button>
+    <button onclick="doTower5()" id="button5"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%205.png?raw=true"><br>Tower 5<br>₪1175</button>
+    <button onclick="doTower6()" id="button6"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%206.png?raw=true"><br>Tower 6<br>₪2375</button>
     <div id="control-right"> 
         <div id="control-right-2">
             Cash ₪<span id="cash">150</span><br>
