--- a/Mason/index.html
+++ b/Mason/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-   <link rel="stylesheet" href="index.css">  
+   <link rel="stylesheet" href="index.css">
+   <script src="LameTD/Mason/">
 </head>
 <body>
 <canvas id="bad" width="800" height="900"></canvas>
