--- a/Mason/index.html
+++ b/Mason/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
    <link rel="stylesheet" href="index.css">
-   <script src="LameTD/Mason/"></script>
+   <script src="enemy.js"></script>
+   <script src="tst.js"></script>
 </head>
 <body>
 <canvas id="bad" width="800" height="900"></canvas>
