--- a/Mason/index.html
+++ b/Mason/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <canvas id="bad" width="800" height="900"></canvas>
+   <script>"makeT1Enemy(200,200);"</script>
 </body>
    </html>
