--- a/Mason/index.html
+++ b/Mason/index.html
@@ -4,8 +4,7 @@
    <script src="enemy.js"></script>
    <script src="tst.js"></script>
 </head>
-<body>
-<canvas id="bad" width="800" height="900"></canvas>
-   <script>"makeT1Enemy(200,200);"</script>
+<body onload = "createWave(10);">
+<canvas id="bad" width="8000" height="900"></canvas>
 </body>
    </html>
