--- a/miki/web/index.html
+++ b/miki/web/index.html
@@ -32,7 +32,7 @@
 
 <canvas id="bad" style="background-color: #4d4d4d;"></canvas>
 <div id="test" class="static" style="background-color:#DCDCDC">
-    <button onclick="doTower1()" id="button1"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%201.png?raw=true"><br>Tower 1<br>₪50</button>
+    <button onclick="selectTower(1)" id="button1"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%201.png?raw=true"><br>Tower 1<br>₪50</button>
     <button onclick="doTower2()" id="button2"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%202.png?raw=true"><br>Tower 2<br>₪125</button>
     <button onclick="doTower3()" id="button3"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%203.png?raw=true"><br>Tower 3<br>₪275</button>
     <button onclick="doTower4()" id="button4"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%204.png?raw=true"><br>Tower 4<br>₪575</button>
