--- a/miki/web/index.html
+++ b/miki/web/index.html
@@ -1,4 +1,12 @@
+HTML 
 <style>
+    .disable-select {
+        user-select: none; /* supported by Chrome and Opera */
+        -webkit-user-select: none; /* Safari */
+        -khtml-user-select: none; /* Konqueror HTML */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+    }
     div.static {
       position: static;
       width: 890px;
@@ -8,7 +16,7 @@
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     #control-right {
-        padding-top: 15px;
+        padding-top: 5px;
         float:right;
     }
     #control-right-2 {
@@ -22,29 +30,56 @@
         position: absolute;
         right: 0;
     }
+    button.bruh {
+        background-color: Transparent;
+        background-repeat:no-repeat;
+        border: none;
+        overflow: hidden;
+        cursor:pointer;
+        outline:none;
+        color:#CCC;
+        padding-left: 15px;
+    }
 </style>
-    
+   
 
 
-<html>
+<html style="background-color: #181a1b;">
     <title>LameTD</title>
 </html>
+<div>
+    <canvas id="bad" style="background-color: #4d4d4d;"></canvas>
+</div>
 
-<canvas id="bad" style="background-color: #4d4d4d;"></canvas>
-<div id="test" class="static" style="background-color:#DCDCDC">
-    <button onclick="selectTower(1)" id="button1"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%201.png?raw=true"><br>Tower 1<br>₪50</button>
-    <button onclick="doTower2()" id="button2"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%202.png?raw=true"><br>Tower 2<br>₪125</button>
-    <button onclick="doTower3()" id="button3"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%203.png?raw=true"><br>Tower 3<br>₪275</button>
-    <button onclick="doTower4()" id="button4"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%204.png?raw=true"><br>Tower 4<br>₪575</button>
-    <button onclick="doTower5()" id="button5"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%205.png?raw=true"><br>Tower 5<br>₪1175</button>
-    <button onclick="doTower6()" id="button6"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%206.png?raw=true"><br>Tower 6<br>₪2375</button>
-    <div id="control-right"> 
-        <div id="control-right-2">
-            Cash ₪<span id="cash">150</span><br>
-            Wave #<span id="wave">1</span>
+
+<div id="test" class="static disable-select" style="background-color:rgb(43, 47, 49)">
+    <button onclick="doTower1()" class="bruh" id="button1"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%201.png?raw=true"><br>Tower 1<br>₪50</button>
+    <button onclick="doTower2()" class="bruh"  id="button2"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%202.png?raw=true"><br>Tower 2<br>₪125</button>
+    <button onclick="doTower3()" class="bruh"  id="button3"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%203.png?raw=true"><br>Tower 3<br>₪275</button>
+    <button onclick="doTower4()" class="bruh"  id="button4"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%204.png?raw=true"><br>Tower 4<br>₪575</button>
+    <button onclick="doTower5()" class="bruh"  id="button5"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%205.png?raw=true"><br>Tower 5<br>₪1175</button>
+    <button onclick="doTower6()" class="bruh"  id="button6"><img src="https://github.com/Zekromeon/LameTD/blob/main/logan/Tower%206.png?raw=true"><br>Tower 6<br>₪2375</button>
+    <div id="control-right">
+        <div id="control-right-2" style="color:#CCC">
+            Cash ₪<span id="cash">100</span><br>
+            Health ♡<span id="health">10</span><br>
+            Wave #<span id="wave">0</span><br>
+            <button onclick="startWave()" id="thing">Start Wave</button>
         </div>
     </div>
 </div>
 
+<p style="color: #fff;">This was a great learning experience.<br>
+
+    i managed to learn that adding "this." to everything made code work<br>
+
+    also, i learned to use a game engine for games<br>
+
+    ok, uhmmmm im gonna go do my drawing and design project now<br>
+
+    goodnight &#9829;<br>
+
+                sincerely, the person who wrote this little part(all i did)
+</p>
+
 <script src="test.js"></script>
-<p id="p"></p>
